--- a/ios/Eun_fashion/Info.plist
+++ b/ios/Eun_fashion/Info.plist
@@ -26,14 +26,13 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -48,5 +47,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>LibreBaskerville-Regular.ttf</string>
+		<string>Lobster-Regular.ttf</string>
+		<string>Montserrat-Regular.ttf</string>
+		<string>Pacifico-Regular.ttf</string>
+		<string>PlayfairDisplay-Regular.ttf</string>
+		<string>ProtestRevolution-Regular.ttf</string>
+		<string>Roboto-Regular.ttf</string>
+		<string>SmoochSans-Regular.ttf</string>
+		<string>Ubuntu-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
